[package]
name = "urlencoding"
version = "2.1.0"
authors = ["Kornel <kornel@geekhood.net>", "Bertram Truong <b@bertramtruong.com>"]
categories = ["encoding", "web-programming"]
description = "A Rust library for doing URL percentage encoding."
homepage = "https://lib.rs/urlencoding"
keywords = ["url", "percent", "escape", "urlencode", "urldecode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kornelski/rust_urlencoding"
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
